fix cookie banner z-index

--- a/src/css/cookies.scss
+++ b/src/css/cookies.scss
@@ -10,6 +10,7 @@
     background-color: $pureWhite;
     box-shadow: $defaultShadowUp;
     transition: opacity $transitionLength $transitionEasing;
+    z-index: 1;
 
     &__button {
         font-weight: 600;
